# mpitools

./: .gitignore  API_DOCS.md  README  README.md  pydoc-markdown.yml  pyproject.toml
.github/workflows/: publish.yml  update-docs.yml
src/mpitools/: __init__.py  base.py  collective.py  divide_work.py  quick_comms.py  reduction.py
src/mpitools/comms/: __init__.py  buffered_collective.py  buffered_reduction.py  collective.py  reduction.py  utils.py  variable_collective.py
src/mpitools/queue/: __init__.py  managers.py  tasks.py
tests/: test_abort.py  test_queue.py
