[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpitools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "mpi4py",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mpitools*"]
